feat: do burger, do format and header background when click-burger, have a problem with navigation (not remove class when click and scroll page)

--- a/sass/style.css
+++ b/sass/style.css
@@ -2,8 +2,8 @@
 html {
   font-family: "Lato", sans-serif;
   font-size: 10px;
-  padding-top: 77px;
-  scroll-padding-top: 77px;
+  padding-top: 71px;
+  scroll-padding-top: 71px;
 }
 
 body {
@@ -14,7 +14,7 @@ body {
 h1 {
   font-family: "Lato", sans-serif;
   font-style: normal;
-  font-weight: 900;
+  font-weight: 700;
   font-size: 3rem;
   line-height: 36px;
   color: #666d89;
@@ -87,9 +87,16 @@ body {
   color: #FFFFFF;
   border-bottom: 6px solid #323746;
 }
+@media (max-width: 650px) {
+  .header {
+    background-color: #2D303A;
+    height: 77px;
+  }
+}
 @media (max-width: 375px) {
   .header {
     height: 71px;
+    border-bottom: 0;
   }
 }
 
@@ -102,12 +109,12 @@ body {
 }
 @media (max-width: 650px) {
   .header__wrapper {
-    justify-content: start;
+    justify-content: center;
   }
 }
 @media (max-width: 375px) {
   .header__wrapper {
-    justify-content: start;
+    justify-content: center;
   }
 }
 
@@ -116,6 +123,7 @@ body {
   padding: 0;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 @media (max-width: 375px) {
   .site_name_wrapper {
@@ -130,8 +138,13 @@ body {
 .site__name {
   margin: 0;
   color: #FFFFFF;
+  width: 100%;
 }
-
+@media (max-width: 650px) {
+  .site__name {
+    text-align: center;
+  }
+}
 .star {
   color: #f06c64;
   font-size: 3rem;
@@ -142,7 +155,7 @@ body {
   content: "";
   display: inline-block;
   position: absolute;
-  background: #173A56;
+  background: #FFFFFF;
   border-radius: 5px;
   width: 100%;
   height: 2.4px;
@@ -156,43 +169,34 @@ body {
 }
 @media (max-width: 650px) {
   .hamburger {
-    display: inline-block;
-    margin-right: 49px;
-    margin-left: 20px;
+    display: block;
+    transition: transform 0.5s ease 0s;
   }
 }
 @media (max-width: 375px) {
   .hamburger {
     display: inline-block;
-    margin-right: 49px;
-    margin-left: 20px;
   }
 }
 .hamburger::before {
   top: 0;
-  left: 0;
 }
 .hamburger::after {
   bottom: 0;
-  left: 0;
 }
 
 .hamburger-line {
   top: 50%;
   transform: translateY(-50%);
-  left: 0;
 }
 
 .navigation {
   padding: 15px 0 0 0;
   display: flex;
-  width: 375px;
-  justify-content: space-between;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
   line-height: 14px;
-  text-align: right;
   letter-spacing: -0.035em;
   transition: all 0.3s;
 }
@@ -207,8 +211,15 @@ body {
   color: #f06c64;
 }
 
-.navigation:first-child {
+.navigation__link {
+  list-style: disc;
+  padding-left: 0px;
+  margin-left: 27px;
+}
+
+.navigation :first-child {
   list-style: none;
+  margin-left: 0px;
 }
 
 @media (max-width: 650px) {
@@ -216,12 +227,47 @@ body {
     display: none;
   }
 }
-@media (max-width: 375px) {
-  .header__navigation {
-    display: none;
+
+@media (max-width: 650px) {
+  .__clickBrg .hamburger {
+    transform: rotate(-90deg);
+  }
+
+  .__clickBrg {
+    padding: 0 10px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    height: 100%;
+    z-index: 15;
+    background-color: #2D303A;
+    color: #FFFFFF;
+    box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
+  }
+  .__clickBrg .header__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .__clickBrg .header__navigation {
+    display: block;
+    margin-top: 80px;
+    margin-bottom: 67px;
+  }
+  .__clickBrg .navigation {
+    display: block;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  .__clickBrg .navigation__link {
+    list-style: none;
+    margin: 0;
+    padding: 20px;
+    font-style: normal;
+    font-size: 2em;
   }
 }
-
 .footer {
   background-color: #2d303a;
 }
@@ -467,7 +513,7 @@ body {
 }
 @media (max-width: 375px) {
   .slider {
-    margin-top: -6px;
+    margin-top: -14px;
   }
 }
 
