--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -10,11 +10,15 @@
     border-bottom: 6px solid $color-border-blue;
 
     @include media-tablet-min {
+        background-color: $color-bg-header;
+        height: 77px;
 
     }
 
+
     @include media-mobile {
         height: 71px;
+        border-bottom: 0;
     }
 }
 
@@ -26,11 +30,12 @@
     justify-content: space-between;
 
     @include media-tablet-min {
-        justify-content: start;
+
+        justify-content: center;
     }
 
     @include media-mobile {
-        justify-content: start;
+        justify-content: center;
     }
 }
 
@@ -39,6 +44,7 @@
     padding: 0;
     display: flex;
     align-items: center;
+    width: 100%;
 
     @include media-tablet-min {
 
@@ -56,6 +62,13 @@
 .site__name {
     margin: 0;
     color: #FFFFFF;
+    width: 100%;
+    @include media-tablet-min {
+        text-align: center;
+    }
+    @include media-mobile {
+
+    }
 }
 
 .star {
@@ -70,7 +83,7 @@
     content: "";
     display: inline-block;
     position: absolute;
-    background: $color-burger-bg-line;
+    background: $color-white;
     border-radius: 5px;
     width: 100%;
     height: 2.4px;
@@ -83,27 +96,26 @@
     width: 25px;
 
     @include media-tablet-min {
-        display: inline-block;
-        margin-right: 49px;
-        margin-left: 20px;
+        display: block;
+        transition: transform 0.5s ease 0s;
+        // margin-right: 49px;
+        // margin-left: 20px;
     }
 
     @include media-mobile {
         display: inline-block;
-        margin-right: 49px;
-        margin-left: 20px;
+        // margin-right: 49px;
+        // margin-left: 20px;
     }
 
     &::before {
        @extend %hamburger-line;
        top: 0;
-       left: 0;
     }
 
     &::after {
         @extend %hamburger-line;
         bottom: 0;
-        left: 0;
     }
 }
 
@@ -111,19 +123,15 @@
     @extend %hamburger-line;
     top: 50%;
     transform: translateY(-50%);
-    left: 0;
 }
 
 .navigation {
     padding: 15px 0 0 0;
     display: flex;
-    width: 375px;
-    justify-content: space-between;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 14px;
-    text-align: right;
     letter-spacing: -0.035em;
     transition: all 0.3s;
 
@@ -142,16 +150,19 @@
     color:  #f06c64;
     }
 
-//  a:target {
-//     color: #f06c64;
-//  }
-
 }
 
+.navigation__link {
+    list-style: disc;
+    padding-left: 0px;
+    margin-left: 27px;
+}
 
-.navigation:first-child {
+ .navigation :first-child {
     list-style: none;
+    margin-left: 0px;
 }
+
 
 .header__navigation {
 
@@ -159,7 +170,57 @@
         display: none;
     }
 
-    @include media-mobile {
-        display: none;
+}
+
+@media (max-width: 650px) {
+
+.__clickBrg .hamburger {
+    transform: rotate(-90deg);
+}
+
+.__clickBrg {
+    padding: 0 10px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    height: 100%;
+    z-index: 15;
+    background-color: $color-bg-header;
+    color: $color-white;
+    box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
+
+
+    .header__wrapper {
+        display: flex;
+        flex-direction: column;
     }
+
+
+
+    .site_name_wrapper{
+    }
+
+    .header__navigation {
+        display: block;
+        margin-top: 80px;
+        margin-bottom: 67px;
+    }
+
+    .navigation {
+        display: block;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .navigation__link {
+        list-style: none;
+        margin: 0;
+        padding: 20px;
+        font-style: normal;
+        font-size: 2.0em;
+    }
+}
+
 }
