--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -12,14 +12,14 @@
     @include media-tablet-min {
         background-color: $color-bg-header;
         height: 77px;
-
-    }
-
-
-    @include media-mobile {
-        height: 71px;
         border-bottom: 0;
     }
+
+
+    // @include media-mobile {
+    //     height: 71px;
+    //     border-bottom: 0;
+    // }
 }
 
 .header__wrapper {
@@ -182,6 +182,7 @@
     padding: 0 10px;
     position: fixed;
     display: flex;
+    transition: all 0.4s ease;
     flex-direction: column;
     width: 65%;
     height: 100%;
@@ -190,11 +191,20 @@
     color: $color-white;
     box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
 
-
     .header__wrapper {
         display: flex;
         flex-direction: column;
     }
+
+    .header__wrapper::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 77px;
+            border-bottom: none;
+        }
 
 
 
