--- a/sass/style.css
+++ b/sass/style.css
@@ -91,11 +91,6 @@ body {
   .header {
     background-color: #2D303A;
     height: 77px;
-  }
-}
-@media (max-width: 375px) {
-  .header {
-    height: 71px;
     border-bottom: 0;
   }
 }
@@ -237,6 +232,7 @@ body {
     padding: 0 10px;
     position: fixed;
     display: flex;
+    transition: all 0.4s ease;
     flex-direction: column;
     width: 65%;
     height: 100%;
@@ -248,6 +244,15 @@ body {
   .__clickBrg .header__wrapper {
     display: flex;
     flex-direction: column;
+  }
+  .__clickBrg .header__wrapper::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 77px;
+    border-bottom: none;
   }
   .__clickBrg .header__navigation {
     display: block;
