--- a/sass/style.css
+++ b/sass/style.css
@@ -238,7 +238,7 @@ body._lock {
     padding: 0 10px;
     position: fixed;
     display: flex;
-    transition: all 0.4s ease;
+    transition: all 0.5s ease;
     flex-direction: column;
     width: 65%;
     height: 100%;
@@ -261,12 +261,13 @@ body._lock {
     border-bottom: none;
   }
   .__clickBrg .site_name_wrapper {
-    margin-bottom: 70px;
+    margin-bottom: 35%;
+    margin-top: 5%;
   }
   .__clickBrg .header__navigation {
     display: block;
-    margin-bottom: 160%;
-    margin-top: 0;
+    margin-bottom: 20%;
+    margin-top: 20%;
   }
   .__clickBrg .navigation {
     display: block;
@@ -514,8 +515,14 @@ body._lock {
   justify-content: space-between;
 }
 
-#home {
+.slider_bckGr {
   background: #f06c64;
+  transition: all ease 0.2s;
+}
+
+._bckGr2 {
+  background: #648bf0;
+  transition: all ease 0.2s;
 }
 
 .slider {
@@ -552,9 +559,9 @@ body._lock {
 }
 @media (max-width: 375px) {
   .btn-container {
-    width: 96%;
-    margin-left: 2%;
-    margin-right: 2%;
+    width: 98%;
+    margin-left: 1%;
+    margin-right: 1%;
   }
 }
 
@@ -563,13 +570,13 @@ body._lock {
   width: 30px;
   background-repeat: no-repeat;
   background-position: center center;
-  border-radius: 5px;
+  border-radius: 4px;
   cursor: pointer;
 }
 @media (max-width: 375px) {
   .btn {
-    height: 24px;
-    width: 24px;
+    height: 22px;
+    width: 22px;
   }
 }
 
@@ -582,8 +589,8 @@ body._lock {
 }
 @media (max-width: 375px) {
   .btn:hover {
-    height: 30px;
-    width: 30px;
+    height: 24px;
+    width: 22px;
   }
 }
 
